--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -36,5 +36,8 @@ jobs:
       - name: Install dependencies
         run: poetry install
 
+      - name: Build
+        run: poetry build
+
       - name: Run tests with coverage
         run: poetry run pytest
